name:                   worldbank
version:                0.1.0.0
synopsis:               World Bank
description:            World Bank data API, including generated data types. 
homepage:               http://github.com/seanparsons/worldbank#readme
license:                BSD3
license-file:           LICENSE
author:                 Sean Parsons
maintainer:             github@futurenotfound.com
copyright:              2015 Sean Parsons
category:               Data
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Data.WorldBank
  other-modules:        Data.WorldBank.TH
  default-extensions:   TemplateHaskell,
                        RecordWildCards,
                        OverloadedStrings
  build-depends:        base >= 4.7 && < 5,
                        mtl,
                        http-client,
                        conduit,
                        aeson,
                        http-client-tls,
                        template-haskell,
                        text,
                        transformers,
                        vector,
                        resourcet,
                        bytestring,
                        scientific
  default-language:     Haskell2010

test-suite worldbank-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base
                      , worldbank
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

source-repository head
  type:                 git
  location:             https://github.com/seanparsons/worldbank
